# fantasy_bot

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  MULTITENANT_BUILD.md  PRODUCT.md  README.md  pyproject.toml  render.yaml
.claude/: launch.json
config/: experts.yaml  roasts.yaml
fantasy/: config.py  league_rules.py  league_settings.py  league_state.py  leagues.py  legal.py
fantasy/analysis/: __init__.py  audit.py
fantasy/api/: app.py  auth.py  billing_routes.py  build.py  clerk_auth.py  confirm.py  dashboard_data.py  espn_routes.py  ratelimit.py  user_build.py
fantasy/backtest/: projections_backtest.py
fantasy/billing/: __init__.py  plans.py  quota.py  service.py
fantasy/chat/: __init__.py  agent.py  tools.py
fantasy/data/: ids.py  nfl.py  returns.py
fantasy/db/: __init__.py  base.py  models.py  proposal_store.py  repos.py
fantasy/decisions/: faab.py  lineup.py  ros.py  startsit.py  trades.py  waivers.py
fantasy/draft/: __init__.py  adp.py  board.py  plan.py  recommend.py  season_board.py  simulator.py  state.py  (+1 more)
legal/: ESPN_CONNECT_CONSENT.md  PRIVACY.md  TERMS.md
migrations/: env.py
scripts/: backtest_projections.py  capture_writes.py  content_bot.py  dashboard.py  decision_audit.py  demo_historical_scoring.py  draft_replay.py  expert_signals_demo.py  headtohead_espn.py  run_cycle.py  run_real.py  serve.py  verify_espn_read.py
tests/: conftest.py  test_api.py  test_audit.py  test_auth_gate.py  test_billing.py  test_build_isolation.py  test_build_resilience.py  test_chat.py  test_chat_ratelimit.py  test_chat_resilience.py  test_clerk_auth.py  test_consensus.py  test_crypto.py  test_data_resilience.py  test_db_isolation.py  test_decisions.py  test_draft.py  test_draft_plan.py  test_ensemble.py  test_espn_connect.py  test_espn_overlay.py  test_espn_readonly.py  test_execute.py  test_experts.py  test_league_rules.py  test_moments.py  test_multileague.py  test_news.py  test_phase3_isolation.py  test_phase4_web.py  test_phase_b.py  test_scoring_adaptivity.py  test_season_board.py  test_usage_props.py  test_user_build.py  test_vor.py
(+69 files in other folders)
