[project]
name = "fantasy-app"
version = "0.1.0"
description = "Autonomous ESPN fantasy football AI — projection model, decision engine, notify-and-approve loop, dashboard"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # ESPN read client
    "espn-api>=0.40.0",
    # Historical data spine (nflverse) + dataframes
    "nflreadpy>=0.1.0",
    "polars>=1.17.0",
    "pandas>=2.2.0",
    "pyarrow>=18.0.0",
    "numpy>=1.26,<2.3",
    "scipy>=1.14.0",
    # Modeling
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
    "lightgbm>=4.5.0",
    "pulp>=2.9.0",
    # HTTP / news ingestion
    "requests>=2.32.0",
    "httpx>=0.27.0",
    "feedparser>=6.0.11",
    # LLM reasoning layer
    "anthropic>=0.40.0",
    # Service / orchestration
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "apscheduler>=3.10.4",
    "jinja2>=3.1.4",
    # Content engine: graphic rendering fallback (Playwright is the optional
    # high-fidelity renderer; Pillow guarantees an image without a browser).
    "pillow>=10.4.0",
    # Config / models
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.32",
    "groq>=1.5.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "cryptography>=43",
    "pyjwt[crypto]>=2.9",
    "markdown>=3.10.2",
    "stripe>=15.3.0",
]

[project.optional-dependencies]
# Phase 1 hyperparameter tuning / explainability (heavier; install when needed)
modeling-extra = ["optuna>=4.0.0", "shap>=0.46.0"]
# Phase 2 notifications
notify = ["slack-bolt>=1.21.0"]
# Phase 3 browser write tier
write = ["playwright>=1.48.0"]
# Dev
dev = ["pytest>=8.3.0", "ruff>=0.7.0", "ipython>=8.28.0"]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fantasy"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
